--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_text_kit: ^4.2.2
   auto_route: ^5.0.4
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   easy_localization: ^3.0.1
-  # firebase_analytics: ^10.1.0
   flutter:
     sdk: flutter
   flutter_gen: ^5.1.0+1
@@ -65,7 +65,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - asset/language/
+    - asset/translations/
     - asset/svg/
     - asset/image/
     - asset/lottie/
@@ -82,17 +82,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: NunitoSans
+      fonts:
+        - asset: asset/fonts/NunitoSans-Regular.ttf
+        - asset: asset/fonts/NunitoSans-Bold.ttf
+        - asset: asset/fonts/NunitoSans-Light.ttf
+
+  
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
