--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,12 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
+flutter_gen:
+  output: lib/common/asset
+
 dependencies:
+  json_annotation: ^4.7.0
   animated_text_kit: ^4.2.2
   auto_route: ^5.0.4
   cupertino_icons: ^1.0.2
@@ -49,7 +54,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  json_annotation: ^4.7.0
   json_serializable: ^6.5.4
   mobx_codegen: ^2.1.1
   mockito: any
