--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,16 @@ environment:
 
 flutter_gen:
   output: lib/common/asset
+  integrations:
+    flutter_svg: true
+  assets:
+    enabled: true
+  colors:
+    enabled: true
+    inputs:
+      - assets/colors/colors.xml
 
 dependencies:
-  json_annotation: ^4.7.0
   animated_text_kit: ^4.2.2
   auto_route: ^5.0.4
   cupertino_icons: ^1.0.2
@@ -43,10 +50,12 @@ dependencies:
     sdk: flutter
   flutter_gen: ^5.1.0+1
   flutter_mobx: ^2.0.6+5
+  json_annotation: ^4.7.0
   lottie: ^2.2.0
   mobx: ^2.1.3
   provider: ^6.0.5
   shared_preferences: ^2.0.16
+  shimmer: ^2.0.0
 
 dev_dependencies:
   auto_route_generator: ^5.0.3
@@ -69,10 +78,32 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - asset/translations/
-    - asset/svg/
-    - asset/image/
-    - asset/lottie/
+   # TRANSLATIONS
+    - assets/translations/
+
+    # AUDIO
+    - assets/audio/
+
+    # SVG
+    - assets/svg/
+
+    # IMAGES
+    - assets/image/
+    - assets/image/health/
+    - assets/image/splash/
+
+    # ICONS
+    - assets/icon/
+    - assets/icon/health/
+    - assets/icon/pomodoro/
+    - assets/icon/reminders/
+    - assets/icon/work/
+
+    # ANIMATION
+    - assets/lottie/
+    - assets/gif/
+
+    # GIF
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -89,11 +120,6 @@ flutter:
   fonts:
     - family: NunitoSans
       fonts:
-        - asset: asset/fonts/NunitoSans-Regular.ttf
-        - asset: asset/fonts/NunitoSans-Bold.ttf
-        - asset: asset/fonts/NunitoSans-Light.ttf
-
-  
-  #
+        - asset: assets/fonts/NunitoSans-Light.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
