--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-
 flutter_gen:
   output: lib/common/asset
   integrations:
@@ -43,6 +42,7 @@ flutter_gen:
 dependencies:
   animated_text_kit: ^4.2.2
   auto_route: ^5.0.4
+  auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   easy_localization: ^3.0.1
@@ -78,7 +78,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-   # TRANSLATIONS
+    # TRANSLATIONS
     - assets/translations/
 
     # AUDIO
@@ -102,7 +102,6 @@ flutter:
     # ANIMATION
     - assets/lottie/
     - assets/gif/
-
     # GIF
   # To add assets to your application, add an assets section, like this:
   # assets:
