--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,24 +41,26 @@ flutter_gen:
 
 dependencies:
   animated_text_kit: ^4.2.2
-  auto_route: ^5.0.4
+  auto_route: ^6.0.5
   auto_size_text: ^3.0.0
   cupertino_icons: ^1.0.2
-  dio: ^4.0.6
+  dio: ^5.1.1
   easy_localization: ^3.0.1
   flutter:
     sdk: flutter
   flutter_gen: ^5.1.0+1
   flutter_mobx: ^2.0.6+5
+  introduction_screen: ^3.1.7
   json_annotation: ^4.7.0
   lottie: ^2.2.0
   mobx: ^2.1.3
   provider: ^6.0.5
   shared_preferences: ^2.0.16
   shimmer: ^2.0.0
+  very_good_analysis: ^4.0.0+1
 
 dev_dependencies:
-  auto_route_generator: ^5.0.3
+  auto_route_generator: ^6.0.0
   build_runner: ^2.3.2
   flutter_lints: ^2.0.0
   flutter_test:
@@ -66,7 +68,6 @@ dev_dependencies:
   json_serializable: ^6.5.4
   mobx_codegen: ^2.1.1
   mockito: any
-  very_good_analysis: ^3.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
