--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_mobx: ^2.0.6+5
   introduction_screen: ^3.1.7
   json_annotation: ^4.7.0
+  jwt_decoder: ^2.0.1
   lottie: ^2.2.0
   mobx: ^2.1.3
   provider: ^6.0.5
@@ -61,13 +62,13 @@ dependencies:
 dev_dependencies:
   auto_route_generator: ^6.0.0
   build_runner: ^2.3.3
+  flutter_gen: ^5.2.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   json_serializable: ^6.5.4
   mobx_codegen: ^2.1.1
   mockito: any
-  flutter_gen: ^5.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
